--- a/TicketsControl/tickets/templates/administracion/datosagente.html
+++ b/TicketsControl/tickets/templates/administracion/datosagente.html
@@ -1,139 +1,122 @@
 {% extends 'base.html' %}
-
+{% block nav_header %}
+    {% include 'componentes/navbarheader.html' %}
+{% endblock %}
 {% block content %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand">
-            <img src="../../static/img/Imagen1.png" alt="" width="70" height="40" class="d-inline-block align-text-top">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'admin_side' %}">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'colas_atencion' %}">Colas de Atencion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'estados_agente' %}">Estados de Agentes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'casos_agente' %}">Casos de Agentes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'tickets_agente' %}">Tickets</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'datos_agente' %}">Agentes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'configuracion' %}">Configuracion de Visualizador</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                        data-bs-target="#modal_nuevoagente">Crear Nuevo Agente</button>
-                </li>
-            </ul>
-            <form class="d-flex">
-                <a class="btn btn-outline-danger" href="{% url 'logout' %}" type="button">Cerrar Sesion</a>
-            </form>
+<div class="p-2 mt-4">
+    <div class="row p-2">
+        <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto card cardCol mb-4">
+            <h5 class="card-title p-2 text-center fw-bold">Agentes</h5>
+            <div class="row">
+                <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto mb-4">
+                    <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto">
+                        <div class="card-body table-responsive">
+                            <div class="table-responsive-sm">
+                                <table id="record-table" style="height: 200px;" class="table table-striped table-hover table-fixed-height">
+                                    <thead class="table-dark">
+                                        <tr>
+                                            <th>
+                                                <h5 class="mt-2 text-center fw-bold">NOMBRE DE AGENTE</h5>
+                                            </th>
+                                            <th>
+                                                <h5 class="mt-2 text-center fw-bold">DEPARTAMENTO</h5>
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for agente in agentes %}
+                                        <tr>
+                                            <td class="text-center align-middle">
+                                                <h5>{{ agente.nombreAgente }}</h5>
+                                            </td>
+                                            <td class="text-center align-middle">
+                                                <h5>{{ agente.departamento }}</h5>
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</nav>
-
-<div class="container">
-    <div class="row mt-5">
-        <table id="record-table" style="height: 200px;" class="table table-striped table-hover table-fixed-height">
-            <thead class="table-dark">
-                <tr>
-                    <th>
-                        <h5 class="mt-2 text-center fw-bold">NOMBRE DE AGENTE</h5>
-                    </th>
-                    <th>
-                        <h5 class="mt-2 text-center fw-bold">DEPARTAMENTO</h5>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for agente in agentes %}
-                <tr>
-                    <td class="text-center align-middle">
-                        <h5>{{ agente.nombreAgente }}</h5>
-                    </td>
-                    <td class="text-center align-middle">
-                        <h5>{{ agente.departamento }}</h5>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <div class="row mt-5">
-        <div class="form-floating mb-3 col">
-            <select id="departamento" data-placeholder="Seleccione Departamento" class="form-select" name="departamento"
-                required onchange="cargarAgentes()">
-                <option value="Admisiones">Admisiones</option>
-                <option value="Registro">Registro</option>
-                <option value="Cursos Libres">Cursos Libres</option>
-                <option value="Cajas">Cajas</option>
-            </select>
+        <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto card cardCol">
+            <div class="row p-2">
+                <div class="col-12 col-sm-10 col-md-12 col-lg-4 mx-auto mb-4 p-2">
+                    <div class="form-floating mb-3 col">
+                        <select id="departamento" data-placeholder="Seleccione Departamento" class="form-select" name="departamento"
+                            required onchange="cargarAgentes()">
+                            <option value="Admisiones">Admisiones</option>
+                            <option value="Registro">Registro</option>
+                            <option value="Cursos Libres">Cursos Libres</option>
+                            <option value="Cajas">Cajas</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-10 col-md-12 col-lg-4 mx-auto mb-4 p-2">
+                    <div class="form-floating mb-3 col">
+                        <select id="agente_select" class="form-select" name="agente_select" data-placeholder="Seleccion Agente">
+                            <option style="opacity: 0.65" value="" disabled selected hidden>Seleccione Agente</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-10 col-md-12 col-lg-4 mx-auto mb-4 p-2">
+                    <div class="form-floating mb-3 date col">
+                        <input type="date" class="form-control" id="date" />
+                    </div>
+                </div>
+                <div class="col-12 col-sm-10 col-md-12 col-lg-12 mx-auto mb-4 p-2">
+                    <div class="card-body table-responsive px-md-4 px-2 pt-3">
+                        <div class="table-responsive-sm">
+                            <table id="record-table2" style="height: 200px;" class="table table-striped table-hover table-fixed-height">
+                                <thead class="table-dark">
+                                    <tr>
+                                        <th>
+                                            <h5 class="mt-2 text-center fw-bold">AGENTE</h5>
+                                        </th>
+                                        <th>
+                                            <h5 class="mt-2 text-center fw-bold">CODIGO</h5>
+                                        </th>
+                                        <th>
+                                            <h5 class="mt-2 text-center fw-bold">FECHA</h5>
+                                        </th>
+                                        <th>
+                                            <h5 class="mt-2 text-center fw-bold">TIMEPO DE INICIO</h5>
+                                        </th>
+                                        <th>
+                                            <h5 class="mt-2 text-center fw-bold">TIEMPO DE FIN</h5>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for record in records %}
+                                    <tr>
+                                        <td class="text-center align-middle">
+                                            <h5 id="id_agente">{{ record.agente_id }}</h5>
+                                        </td>
+                                        <td class="text-center align-middle">
+                                            <h5>{{ record.codigoCaso }}</h5>
+                                        </td>
+                                        <td class="text-center align-middle">
+                                            <h5 id="fecha">{{ record.fecha }}</h5>
+                                        </td>
+                                        <td class="text-center align-middle">
+                                            <h5>{{ record.tiempoInicio }}</h5>
+                                        </td>
+                                        <td class="text-center align-middle">
+                                            <h5>{{ record.tiempoFinal }}</h5>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-floating mb-3 col">
-            <select id="agente_select" class="form-select" name="agente_select" data-placeholder="Seleccion Agente">
-                <option style="opacity: 0.65" value="" disabled selected hidden>Seleccione Agente</option>
-            </select>
-        </div>
-        <div class="form-floating mb-3 date col">
-            <input type="date" class="form-control" id="date" />
-        </div>
-    </div>
-    <div class="row mt-5">
-        <table id="record-table2" style="height: 200px;" class="table table-striped table-hover table-fixed-height">
-            <thead class="table-dark">
-                <tr>
-                    <th>
-                        <h5 class="mt-2 text-center fw-bold">AGENTE</h5>
-                    </th>
-                    <th>
-                        <h5 class="mt-2 text-center fw-bold">CODIGO</h5>
-                    </th>
-                    <th>
-                        <h5 class="mt-2 text-center fw-bold">FECHA</h5>
-                    </th>
-                    <th>
-                        <h5 class="mt-2 text-center fw-bold">TIMEPO DE INICIO</h5>
-                    </th>
-                    <th>
-                        <h5 class="mt-2 text-center fw-bold">TIEMPO DE FIN</h5>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for record in records %}
-                <tr>
-                    <td class="text-center align-middle">
-                        <h5 id="id_agente">{{ record.agente_id }}</h5>
-                    </td>
-                    <td class="text-center align-middle">
-                        <h5>{{ record.codigoCaso }}</h5>
-                    </td>
-                    <td class="text-center align-middle">
-                        <h5 id="fecha">{{ record.fecha }}</h5>
-                    </td>
-                    <td class="text-center align-middle">
-                        <h5>{{ record.tiempoInicio }}</h5>
-                    </td>
-                    <td class="text-center align-middle">
-                        <h5>{{ record.tiempoFinal }}</h5>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
     </div>
 </div>
 
@@ -190,11 +173,6 @@
 </div>
 {% endblock modal_nuevoagente %}
 
-<style>
-    .input-group-append {
-        cursor: pointer;
-    }
-</style>
 <script>
     window.onload = function () {
         cargarAgentes();
@@ -237,16 +215,6 @@
 
     const recordTable = document.getElementById('record-table');
     const recordTable2 = document.getElementById('record-table2');
-    const socket = new WebSocket('ws://' + window.location.host + '/ws/tickets_control/');
-
-    socket.onmessage = function (event) {
-        const message = event.data;
-        if (message === 'update') {
-            // Actualiza la tabla de registros
-            fetchRecords();
-            fetchRecords2();
-        }
-    };
 
     function fetchRecords() {
         fetch(window.location.href, { headers: { 'X-Requested-With': 'XMLHttpRequest' } })
@@ -268,7 +236,8 @@
             });
     }
 
-    setInterval(fetchRecords, 300000);  // Realiza una solicitud AJAX periódica para mantener la tabla actualizada
+    setInterval(fetchRecords, 300000);
+    setInterval(fetchRecords2, 300000);  // Realiza una solicitud AJAX periódica para mantener la tabla actualizada
 
     // Obtener la referencia al select del agente
     var agenteSelect = document.getElementById("agente_select");
