--- a/TicketsControl/tickets/templates/agentes/atencion_agentes.html
+++ b/TicketsControl/tickets/templates/agentes/atencion_agentes.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
-
+{% block nav_header %}
+    
+{% endblock %}
 {% block content %}
 <div class="row mt-5">
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto mt-5 mb-5">
-        <div class="card border-0 shadow rounded-3 my-5 mx-auto">
+        <div class="card border-0 cardCol rounded-3 my-5 mx-auto">
             <div class="card-body p-4 p-sm-5">
                 <h5 class="card-title text-center mb-5 fw-light fs-5 fw-bold"> Registro Agente </h5>
                 {% if form.errors %}
