--- a/TicketsControl/tickets/templates/home.html
+++ b/TicketsControl/tickets/templates/home.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="p-2">
   <div class="row mt-5">
-    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto mt-5 mb-5">
-      <div class="card border-0 shadow rounded-3 my-5 mx-auto">
+    <div class="col-12 col-sm-12 col-md-9 col-lg-5 mx-auto mt-5 mb-5">
+      <div class="card border-0 rounded-3 my-5 mx-auto cardCol">
         <div class="card-body p-4 p-sm-5">
           <h5 class="card-title text-center mb-5 fw-light fs-5 fw-bold"> Sistema Tickets de Atencion al Cliente </h5>
           {% if form.errors %}
