--- a/TicketsControl/tickets/templates/visualizador/ticket_control.html
+++ b/TicketsControl/tickets/templates/visualizador/ticket_control.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
 
-{% block content %}
-
+{% load static %}
+{% block voz %}
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=Uv0LE8N2"></script>
+{% endblock voz %}
+{% block context %}
 <div class="row">
     <div class="col-12 col-sm-12 col-md-12 col-lg-12" id="div0">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-6" id="div1">
                 {% if tipo %}
-                    <iframe class="d-block w-100"  id="videoFrame" src="{{ link }}" frameborder="0"
-                        allow="accelerometer; mute; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen
-                        width="100%"
-                        height="660px">
-                    </iframe>
-                
+                <iframe class="d-block w-100" id="videoFrame" src="{{ link }}" frameborder="0"
+                    allow="accelerometer; mute; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+                </iframe>
+
                 {% else %}
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -52,7 +53,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {% for record in records|slice:":5" %}
+                        {% for record in records|slice:":6" %}
                         <tr>
                             <td class="text-center">
                                 <h1 class="display-4 mt-3 mb-3 fw-bold">{{ record.codigoCaso }}</h1>
@@ -67,70 +68,40 @@
                         {% endfor %}
                     </tbody>
                 </table>
-        
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="background-color: #000000; ">
-                <h1 id="movingH1" class="display-3 mt-4"
-                style="color: #FED141;">{{ noticia }}</h1>
+
             </div>
         </div>
     </div>
-    
 </div>
-
 <style>
-    #div0 {
-        width: 100%;
-    }
-
-    #div1 {
-        width: 48%;
-        margin: 0;
-        padding: 0;
-    }
-
-    #div2 {
-        width: 52%;
-        margin: 0;
-        padding: 0;
-    }
-
     body {
         overflow-y: hidden;
         overflow-x: hidden;
     }
-
-    .uppercase-column {
-        text-transform: uppercase;
-    }
-
-    @keyframes moveRightToLeft {
-        0% {
-            transform: translateX(100%);
-        }
-
-        100% {
-            transform: translateX(-100%);
-        }
-    }
-
-    #movingH1 {
-        animation: moveRightToLeft 15s linear infinite;
-    }
-
 </style>
 <script>
-    const recordTable = document.getElementById('record-table');
-    const socket = new WebSocket('ws://' + window.location.host + '/ws/tickets_updates/');
+    var playlist  = new Array();
+    var posicionActual = 0;
+    responsiveVoice.setDefaultVoice("Spanish Female");
+    responsiveVoice.speak('Bienvenidos');
 
-    socket.onmessage = function (event) {
-        const message = event.data;
-        if (message === 'update') {
-            // Actualiza la tabla de registros
-            fetchRecords();
-
+    function isFullscreen() {
+        return (window.innerHeight === screen.height && window.innerWidth === screen.width);
+    }
+    
+    function applyFullscreenStyles() {
+        if (isFullscreen()) {
+            document.documentElement.classList.add("fullscreen");
+        } else {
+            document.documentElement.classList.remove("fullscreen");
         }
-    };
+    }
+    window.addEventListener("resize", applyFullscreenStyles);
+    window.addEventListener("fullscreenchange", applyFullscreenStyles);
+    
+    applyFullscreenStyles();
+
+    const recordTable = document.getElementById('record-table');
 
     function fetchRecords() {
         fetch(window.location.href, { headers: { 'X-Requested-With': 'XMLHttpRequest' } })
@@ -139,9 +110,63 @@
                 const parser = new DOMParser();
                 const newTable = parser.parseFromString(data, 'text/html').getElementById('record-table');
                 recordTable.innerHTML = newTable.innerHTML;
+                listareproduccion();
             });
     }
 
-    setInterval(fetchRecords, 1000);  // Realiza una solicitud AJAX periódica para mantener la tabla actualizada
+    function listareproduccion() {
+        var url = "/reproductor/";
+        var request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function () {
+            if (request.status === 200) {
+                var data = JSON.parse(request.responseText);
+                if (data.list.length !== 0){
+                    if (data.list.length > 1){
+                        for (let i = 0; i < data.list.length; i++) {
+                            playlist.push(data.list[i]);
+                            console.log("dato entrante:"+data.list[i])
+                        }
+                    }else{
+                        playlist.push(data.list[0]);
+                        console.log('datos repetido');
+                    }
+
+                    if(responsiveVoice.isPlaying()) {
+                        console.log("Reproduciendo")
+                    }
+                    else{
+                        reproducirLista();
+                    }
+                }
+            }
+        };
+        request.send();
+    }
+    
+    function reproducirLista() {
+        var textoActual = ""
+        if (playlist.length === 0) {
+            playlist = [];
+            console.log("Lista eliminada.")
+            return;
+        }
+        
+        textoActual = playlist[0];
+        playlist.shift();
+        responsiveVoice.speak(textoActual, 'Spanish Female', {
+            onend: function() {
+                reproducirLista();
+            }
+        });
+    }
+
+    setInterval(fetchRecords, 1000);
 </script>
 {% endblock %}
+
+{% block footer %}
+
+{% include 'componentes/footer.html' %}
+
+{% endblock footer %}
