--- a/TicketsControl/tickets/templates/administracion/configuracion.html
+++ b/TicketsControl/tickets/templates/administracion/configuracion.html
@@ -27,7 +27,7 @@
                             </label>
                             <div class="input-group mb-4">
                                 <input type="text" value="{{ records.text }}" name="text" class="form-control" id="text"
-                                    aria-describedby="basic-addon3">
+                                    aria-describedby="basic-addon3" maxlength="100">
                             </div>
                         </div>
                         <div class="form-group mb-4">
